# sudoku-solver

./: .pre-commit-config.yaml  Dockerfile  README.md  algo.py  app.py  ocr.py  pyproject.toml
.github/workflows/: build-and-deploy.yml
